--- a/application.yml
+++ b/application.yml
@@ -7,7 +7,7 @@ hello:
 
 greeting:
   hello: Hello, World!!!
-  message: Hello world
+  message: Hello world!!!
 
 dummy:
   property: some value tweaked
