--- a/application.yml
+++ b/application.yml
@@ -9,6 +9,9 @@ greeting:
   hello: Hello, World!!!
   message: Hiya!
 
+demo:
+  property: SIMPLE VALUE
+
 dummy:
   property: some value tweaked
 ---
