--- a/application.yml
+++ b/application.yml
@@ -1,6 +1,7 @@
 myapp:
   who: GitHub configuration repository!!!!!
   password: s3cr3t
+  anotherProperty: so there
 
 hello:
   message: Hello World!!!!
