--- a/application.yml
+++ b/application.yml
@@ -11,7 +11,7 @@ greeting:
   message: Hi there!!!
 
 demo:
-  property: Changing for the 5th time for a demo recording.
+  property: Changing for the 6th time.
 
 dummy:
   property: some value tweaked yet again once more
