--- a/application.yml
+++ b/application.yml
@@ -11,7 +11,7 @@ greeting:
   message: Hi there!!!
 
 demo:
-  property: Changing for the 7th time. Once more with feeling and once more for the band.
+  property: Eighth time's a charm...
 
 dummy:
   property: some value tweaked yet again once more
