--- a/application.yml
+++ b/application.yml
@@ -13,7 +13,7 @@ tweaked: Seven
 
 greeting:
   hello: Hello, World!!!
-  message: Hi there!!!
+  message: Hello, refresh test!
 
 demo:
   property: Nine nine nine nine
