--- a/application.yml
+++ b/application.yml
@@ -13,7 +13,7 @@ tweaked: Seven
 
 greeting:
   hello: Hello, World!!!
-  message: Hello, refresh test four!!!
+  message: Hello, refresh test FIVE!!!
 
 demo:
   property: 'Ten: 10'
