--- a/application.yml
+++ b/application.yml
@@ -1,10 +1,10 @@
 myapp:
-  who: GitHub configuration repository!!!!!
+  who: GitHub configuration repository!
   password: s3cr3t
   anotherProperty: so there
 
 hello:
-  message: Hello World!!!!
+  message: Hello World!
 
 identity:
   name: Tony Stark
