--- a/application.yml
+++ b/application.yml
@@ -13,7 +13,7 @@ tweaked: Seven
 
 greeting:
   hello: Hello, World!
-  message: Hello, refresh test SIX?
+  message: Hiya, refresh test 7!
 
 demo:
   property: 'Ten: 10'
