--- a/application.yml
+++ b/application.yml
@@ -1,5 +1,5 @@
 myapp:
-  who: GitHub configuration repository!!!!!
+  who: GitHub configuration repository (side work branch)!!!!!
   password: s3cr3t
 
 hello:
