--- a/application.yml
+++ b/application.yml
@@ -1,9 +1,9 @@
 myapp:
-  who: GitHub configuration repository (side work branch)!!!!!
+  who: GitHub configuration repository (side work branch)!!
   password: s3cr3t
 
 hello:
-  message: Hello World (from the SIDE)!!!!!
+  message: Hello World (from the SIDE)!!
 
 greeting:
   hello: Hola, World (SIDE)!!!
