--- a/application.yml
+++ b/application.yml
@@ -1,5 +1,5 @@
 myapp:
-  who: GitHub configuration repository!
+  who: GitHub configuration repository!!!
   password: s3cr3t
   anotherProperty: so there
 
