--- a/application.yml
+++ b/application.yml
@@ -52,3 +52,14 @@ spring:
 what:
   is:
     up: dawg
+    
+spring:
+  profiles:
+  - one
+  - two
+  - cloud
+  - four
+  
+once:
+  more:
+    with: feeling
