--- a/application.yml
+++ b/application.yml
@@ -11,9 +11,9 @@ management:
     health:
       show-details: always
 
-health:
-  config:
-    enabled: false
+# health:
+#   config:
+#     enabled: false
 
 myapp:
   who: GitHub configuration repository!!!
