--- a/application.yml
+++ b/application.yml
@@ -6,12 +6,12 @@ fluxcd:
   arbitrary:
     property: just another test!!!
 
-# indexed:
-#   array:
-#     property:
-#       - this
-#       - that
-#       - the other thing
+indexed:
+  array:
+    property:
+      - this
+      - that
+      - the other thing
 
 
 management:
