--- a/application.yml
+++ b/application.yml
@@ -83,7 +83,7 @@ eureka:
       defaultZone: http://localhost:8761/eureka/
 
 ---
-spring.config.activate.on-profile: cloud
+spring.config.activate.on-profile: tap
 
 greeting:
   message: Hello, Tanzu Application Platform!
