Tweak someapp/default/application/yml

--- a/someapp/default/application.yml
+++ b/someapp/default/application.yml
@@ -1,6 +1,9 @@
 greeting:
-  message: Hello SOME APP
+  message: Hello SOME APP IN THE DEFAULT PROFILE!!!
 
 a:
   b:
-    c: 12345  
+    c: 12345
+
+habuma:
+  craig: Hiya!
