--- a/application.yml
+++ b/application.yml
@@ -84,7 +84,7 @@ just:
 
 greeting:
   hello: Hello, World!
-  message: Hello again, world!
+  message: Hello again, world!!!!!!!!!!
 
 demo:
   property: 'Ten: 10'
