--- a/application.yml
+++ b/application.yml
@@ -3,3 +3,11 @@ bar: foo
 baz: 123
 greeting: Hi there!
 greeting.message: Hello Spring!
+
+---
+spring:
+  config:
+    activate:
+      on-profile: cloud
+
+greeting.message: Hello Cloud!!!
