--- a/application-cloud.yml
+++ b/application-cloud.yml
@@ -2,6 +2,9 @@ baby:
   yoda:
     name: Grogu
 
+greeting.message: Hello Cloud Profile (where profile is determined by the filename) !!!
+
+
 ---
 spring:
   config:
