--- a/application.yml
+++ b/application.yml
@@ -2,7 +2,7 @@ foo: bar
 bar: foo
 baz: 123
 greeting: Hi there!
-greeting.message: Hello Default Profile!
+# greeting.message: Hello Default Profile!
 
 ---
 spring:
